sqlparser/y.output

state 0
	$accept: .any_command $end 

	SELECT  shift 18
	INSERT  shift 19
	UPDATE  shift 20
	DELETE  shift 21
	DESC  shift 32
	SET  shift 22
	BEGIN  shift 27
	COMMIT  shift 28
	ROLLBACK  shift 29
	REPLACE  shift 30
	ADMIN  shift 33
	SHOW  shift 31
	CREATE  shift 23
	ALTER  shift 24
	DROP  shift 26
	RENAME  shift 25
	.  error

	any_command  goto 1
	command  goto 2
	select_statement  goto 3
	insert_statement  goto 4
	update_statement  goto 5
	delete_statement  goto 6
	set_statement  goto 7
	create_statement  goto 8
	alter_statement  goto 9
	rename_statement  goto 10
	drop_statement  goto 11
	begin_statement  goto 12
	commit_statement  goto 13
	rollback_statement  goto 14
	replace_statement  goto 15
	show_statement  goto 16
	admin_statement  goto 17

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.    (1)

	.  reduce 1 (src line 168)


state 3
	command:  select_statement.    (2)
	select_statement:  select_statement.union_op select_statement 

	UNION  shift 35
	MINUS  shift 36
	EXCEPT  shift 37
	INTERSECT  shift 38
	.  reduce 2 (src line 174)

	union_op  goto 34

state 4
	command:  insert_statement.    (3)

	.  reduce 3 (src line 179)


state 5
	command:  update_statement.    (4)

	.  reduce 4 (src line 180)


state 6
	command:  delete_statement.    (5)

	.  reduce 5 (src line 181)


state 7
	command:  set_statement.    (6)

	.  reduce 6 (src line 182)


state 8
	command:  create_statement.    (7)

	.  reduce 7 (src line 183)


state 9
	command:  alter_statement.    (8)

	.  reduce 8 (src line 184)


state 10
	command:  rename_statement.    (9)

	.  reduce 9 (src line 185)


state 11
	command:  drop_statement.    (10)

	.  reduce 10 (src line 186)


state 12
	command:  begin_statement.    (11)

	.  reduce 11 (src line 187)


state 13
	command:  commit_statement.    (12)

	.  reduce 12 (src line 188)


state 14
	command:  rollback_statement.    (13)

	.  reduce 13 (src line 189)


state 15
	command:  replace_statement.    (14)

	.  reduce 14 (src line 190)


state 16
	command:  show_statement.    (15)

	.  reduce 15 (src line 191)


state 17
	command:  admin_statement.    (16)

	.  reduce 16 (src line 192)


state 18
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list limit_opt 
	select_statement:  SELECT.comment_opt distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	$$49: .    (49)

	.  reduce 49 (src line 370)

	comment_opt  goto 39
	$$49  goto 40

state 19
	insert_statement:  INSERT.comment_opt INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT.comment_opt INTO dml_table_expression SET update_list on_dup_opt 
	$$49: .    (49)

	.  reduce 49 (src line 370)

	comment_opt  goto 41
	$$49  goto 40

state 20
	update_statement:  UPDATE.comment_opt dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 
	$$49: .    (49)

	.  reduce 49 (src line 370)

	comment_opt  goto 42
	$$49  goto 40

state 21
	delete_statement:  DELETE.comment_opt FROM dml_table_expression where_expression_opt order_by_opt limit_opt 
	$$49: .    (49)

	.  reduce 49 (src line 370)

	comment_opt  goto 43
	$$49  goto 40

state 22
	set_statement:  SET.comment_opt update_list 
	set_statement:  SET.comment_opt NAMES ID 
	$$49: .    (49)

	.  reduce 49 (src line 370)

	comment_opt  goto 44
	$$49  goto 40

state 23
	create_statement:  CREATE.DATABASE not_exists_opt ID force_eof 
	create_statement:  CREATE.TABLE not_exists_opt ID force_eof 
	create_statement:  CREATE.constraint_opt INDEX sql_id using_opt ON ID force_eof 
	create_statement:  CREATE.VIEW sql_id force_eof 
	constraint_opt: .    (214)

	TABLE  shift 46
	VIEW  shift 48
	UNIQUE  shift 49
	DATABASE  shift 45
	.  reduce 214 (src line 1109)

	constraint_opt  goto 47

state 24
	alter_statement:  ALTER.ignore_opt TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE ID RENAME to_opt ID 
	alter_statement:  ALTER.VIEW sql_id force_eof 
	ignore_opt: .    (205)

	VIEW  shift 51
	IGNORE  shift 52
	.  reduce 205 (src line 1087)

	ignore_opt  goto 50

state 25
	rename_statement:  RENAME.TABLE ID TO ID 

	TABLE  shift 53
	.  error


state 26
	drop_statement:  DROP.TABLE exists_opt ID 
	drop_statement:  DROP.INDEX sql_id ON ID 
	drop_statement:  DROP.VIEW exists_opt sql_id force_eof 

	TABLE  shift 54
	INDEX  shift 55
	VIEW  shift 56
	.  error


state 27
	begin_statement:  BEGIN.    (28)

	.  reduce 28 (src line 265)


state 28
	commit_statement:  COMMIT.    (29)

	.  reduce 29 (src line 271)


state 29
	rollback_statement:  ROLLBACK.    (30)

	.  reduce 30 (src line 277)


state 30
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE.comment_opt INTO dml_table_expression SET update_list 
	$$49: .    (49)

	.  reduce 49 (src line 370)

	comment_opt  goto 57
	$$49  goto 40

state 31
	show_statement:  SHOW.VARIABLES LIKE value_expression 
	show_statement:  SHOW.STATUS LIKE value_expression 
	show_statement:  SHOW.DATABASES like_or_where_opt 
	show_statement:  SHOW.TABLES from_opt like_or_where_opt 
	show_statement:  SHOW.PROXY sql_id from_opt like_or_where_opt 

	DATABASES  shift 60
	TABLES  shift 61
	PROXY  shift 62
	VARIABLES  shift 58
	STATUS  shift 59
	.  error


state 32
	show_statement:  DESC.ID 

	ID  shift 63
	.  error


state 33
	admin_statement:  ADMIN.sql_id '(' value_expression_list ')' 

	ID  shift 65
	.  error

	sql_id  goto 64

state 34
	select_statement:  select_statement union_op.select_statement 

	SELECT  shift 18
	.  error

	select_statement  goto 66

state 35
	union_op:  UNION.    (53)
	union_op:  UNION.ALL 

	ALL  shift 67
	.  reduce 53 (src line 389)


state 36
	union_op:  MINUS.    (55)

	.  reduce 55 (src line 398)


state 37
	union_op:  EXCEPT.    (56)

	.  reduce 56 (src line 402)


state 38
	union_op:  INTERSECT.    (57)

	.  reduce 57 (src line 406)


state 39
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list limit_opt 
	select_statement:  SELECT comment_opt.distinct_opt select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	distinct_opt: .    (58)

	DISTINCT  shift 69
	.  reduce 58 (src line 411)

	distinct_opt  goto 68

state 40
	comment_opt:  $$49.comment_list 
	comment_list: .    (51)

	.  reduce 51 (src line 380)

	comment_list  goto 70

state 41
	insert_statement:  INSERT comment_opt.INTO dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt.INTO dml_table_expression SET update_list on_dup_opt 

	INTO  shift 71
	.  error


state 42
	update_statement:  UPDATE comment_opt.dml_table_expression SET update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 73
	.  error

	dml_table_expression  goto 72

state 43
	delete_statement:  DELETE comment_opt.FROM dml_table_expression where_expression_opt order_by_opt limit_opt 

	FROM  shift 74
	.  error


state 44
	set_statement:  SET comment_opt.update_list 
	set_statement:  SET comment_opt.NAMES ID 

	ID  shift 80
	NAMES  shift 76
	.  error

	column_name  goto 78
	update_list  goto 75
	update_expression  goto 77
	sql_id  goto 79

state 45
	create_statement:  CREATE DATABASE.not_exists_opt ID force_eof 
	not_exists_opt: .    (203)

	IF  shift 82
	.  reduce 203 (src line 1082)

	not_exists_opt  goto 81

state 46
	create_statement:  CREATE TABLE.not_exists_opt ID force_eof 
	not_exists_opt: .    (203)

	IF  shift 82
	.  reduce 203 (src line 1082)

	not_exists_opt  goto 83

state 47
	create_statement:  CREATE constraint_opt.INDEX sql_id using_opt ON ID force_eof 

	INDEX  shift 84
	.  error


state 48
	create_statement:  CREATE VIEW.sql_id force_eof 

	ID  shift 65
	.  error

	sql_id  goto 85

state 49
	constraint_opt:  UNIQUE.    (215)

	.  reduce 215 (src line 1111)


state 50
	alter_statement:  ALTER ignore_opt.TABLE ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt.TABLE ID RENAME to_opt ID 

	TABLE  shift 86
	.  error


state 51
	alter_statement:  ALTER VIEW.sql_id force_eof 

	ID  shift 65
	.  error

	sql_id  goto 87

state 52
	ignore_opt:  IGNORE.    (206)

	.  reduce 206 (src line 1089)


state 53
	rename_statement:  RENAME TABLE.ID TO ID 

	ID  shift 88
	.  error


state 54
	drop_statement:  DROP TABLE.exists_opt ID 
	exists_opt: .    (201)

	IF  shift 90
	.  reduce 201 (src line 1077)

	exists_opt  goto 89

state 55
	drop_statement:  DROP INDEX.sql_id ON ID 

	ID  shift 65
	.  error

	sql_id  goto 91

state 56
	drop_statement:  DROP VIEW.exists_opt sql_id force_eof 
	exists_opt: .    (201)

	IF  shift 90
	.  reduce 201 (src line 1077)

	exists_opt  goto 92

state 57
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt.INTO dml_table_expression SET update_list 

	INTO  shift 93
	.  error


state 58
	show_statement:  SHOW VARIABLES.LIKE value_expression 

	LIKE  shift 94
	.  error


state 59
	show_statement:  SHOW STATUS.LIKE value_expression 

	LIKE  shift 95
	.  error


state 60
	show_statement:  SHOW DATABASES.like_or_where_opt 
	like_or_where_opt: .    (101)

	WHERE  shift 97
	LIKE  shift 98
	.  reduce 101 (src line 606)

	like_or_where_opt  goto 96

state 61
	show_statement:  SHOW TABLES.from_opt like_or_where_opt 
	from_opt: .    (104)

	FROM  shift 100
	.  reduce 104 (src line 619)

	from_opt  goto 99

state 62
	show_statement:  SHOW PROXY.sql_id from_opt like_or_where_opt 

	ID  shift 65
	.  error

	sql_id  goto 101

state 63
	show_statement:  DESC ID.    (34)

	.  reduce 34 (src line 298)


state 64
	admin_statement:  ADMIN sql_id.'(' value_expression_list ')' 

	'('  shift 102
	.  error


state 65
	sql_id:  ID.    (218)

	.  reduce 218 (src line 1119)


state 66
	select_statement:  select_statement.union_op select_statement 
	select_statement:  select_statement union_op select_statement.    (19)

	.  reduce 19 (src line 203)

	union_op  goto 34

state 67
	union_op:  UNION ALL.    (54)

	.  reduce 54 (src line 394)


state 68
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list limit_opt 
	select_statement:  SELECT comment_opt distinct_opt.select_expression_list FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 

	EXISTS  shift 120
	NULL  shift 124
	VALUES  shift 130
	ID  shift 107
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 112
	'~'  shift 128
	NOT  shift 111
	'+'  shift 126
	'-'  shift 127
	'*'  shift 105
	CASE  shift 131
	IF  shift 129
	.  error

	select_expression_list  goto 103
	select_expression  goto 104
	expression  goto 106
	boolean_expression  goto 108
	condition  goto 110
	value  goto 113
	value_expression  goto 109
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 69
	distinct_opt:  DISTINCT.    (59)

	.  reduce 59 (src line 415)


state 70
	comment_opt:  $$49 comment_list.    (50)
	comment_list:  comment_list.COMMENT 

	COMMENT  shift 132
	.  reduce 50 (src line 374)


state 71
	insert_statement:  INSERT comment_opt INTO.dml_table_expression column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt INTO.dml_table_expression SET update_list on_dup_opt 

	ID  shift 73
	.  error

	dml_table_expression  goto 133

state 72
	update_statement:  UPDATE comment_opt dml_table_expression.SET update_list where_expression_opt order_by_opt limit_opt 

	SET  shift 134
	.  error


state 73
	dml_table_expression:  ID.    (91)
	dml_table_expression:  ID.'.' ID 

	'.'  shift 135
	.  reduce 91 (src line 560)


state 74
	delete_statement:  DELETE comment_opt FROM.dml_table_expression where_expression_opt order_by_opt limit_opt 

	ID  shift 73
	.  error

	dml_table_expression  goto 136

state 75
	set_statement:  SET comment_opt update_list.    (26)
	update_list:  update_list.',' update_expression 

	','  shift 137
	.  reduce 26 (src line 254)


state 76
	set_statement:  SET comment_opt NAMES.ID 

	ID  shift 138
	.  error


state 77
	update_list:  update_expression.    (197)

	.  reduce 197 (src line 1056)


state 78
	update_expression:  column_name.'=' value_expression 
	update_expression:  column_name.'=' ON 

	'='  shift 139
	.  error


state 79
	column_name:  sql_id.    (167)

	.  reduce 167 (src line 910)


state 80
	column_name:  ID.'.' sql_id 
	sql_id:  ID.    (218)

	'.'  shift 140
	.  reduce 218 (src line 1119)


state 81
	create_statement:  CREATE DATABASE not_exists_opt.ID force_eof 

	ID  shift 141
	.  error


state 82
	not_exists_opt:  IF.NOT EXISTS 

	NOT  shift 142
	.  error


state 83
	create_statement:  CREATE TABLE not_exists_opt.ID force_eof 

	ID  shift 143
	.  error


state 84
	create_statement:  CREATE constraint_opt INDEX.sql_id using_opt ON ID force_eof 

	ID  shift 65
	.  error

	sql_id  goto 144

state 85
	create_statement:  CREATE VIEW sql_id.force_eof 
	force_eof: .    (219)

	.  reduce 219 (src line 1125)

	force_eof  goto 145

state 86
	alter_statement:  ALTER ignore_opt TABLE.ID non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE.ID RENAME to_opt ID 

	ID  shift 146
	.  error


state 87
	alter_statement:  ALTER VIEW sql_id.force_eof 
	force_eof: .    (219)

	.  reduce 219 (src line 1125)

	force_eof  goto 147

state 88
	rename_statement:  RENAME TABLE ID.TO ID 

	TO  shift 148
	.  error


state 89
	drop_statement:  DROP TABLE exists_opt.ID 

	ID  shift 149
	.  error


state 90
	exists_opt:  IF.EXISTS 

	EXISTS  shift 150
	.  error


state 91
	drop_statement:  DROP INDEX sql_id.ON ID 

	ON  shift 151
	.  error


state 92
	drop_statement:  DROP VIEW exists_opt.sql_id force_eof 

	ID  shift 65
	.  error

	sql_id  goto 152

state 93
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression column_list_opt row_list 
	replace_statement:  REPLACE comment_opt INTO.dml_table_expression SET update_list 

	ID  shift 73
	.  error

	dml_table_expression  goto 153

state 94
	show_statement:  SHOW VARIABLES LIKE.value_expression 

	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	value  goto 113
	value_expression  goto 154
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 95
	show_statement:  SHOW STATUS LIKE.value_expression 

	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	value  goto 113
	value_expression  goto 156
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 96
	show_statement:  SHOW DATABASES like_or_where_opt.    (35)

	.  reduce 35 (src line 302)


state 97
	like_or_where_opt:  WHERE.boolean_expression 

	EXISTS  shift 120
	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 112
	'~'  shift 128
	NOT  shift 111
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	boolean_expression  goto 157
	condition  goto 110
	value  goto 113
	value_expression  goto 158
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 98
	like_or_where_opt:  LIKE.value_expression 

	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	value  goto 113
	value_expression  goto 159
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 99
	show_statement:  SHOW TABLES from_opt.like_or_where_opt 
	like_or_where_opt: .    (101)

	WHERE  shift 97
	LIKE  shift 98
	.  reduce 101 (src line 606)

	like_or_where_opt  goto 160

state 100
	from_opt:  FROM.value_expression 

	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	value  goto 113
	value_expression  goto 161
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 101
	show_statement:  SHOW PROXY sql_id.from_opt like_or_where_opt 
	from_opt: .    (104)

	FROM  shift 100
	.  reduce 104 (src line 619)

	from_opt  goto 162

state 102
	admin_statement:  ADMIN sql_id '('.value_expression_list ')' 

	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	value  goto 113
	value_expression  goto 164
	tuple  goto 115
	value_expression_list  goto 163
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 103
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.limit_opt 
	select_statement:  SELECT comment_opt distinct_opt select_expression_list.FROM table_expression_list where_expression_opt group_by_opt having_opt order_by_opt limit_opt lock_opt 
	select_expression_list:  select_expression_list.',' select_expression 
	limit_opt: .    (185)

	FROM  shift 166
	LIMIT  shift 168
	','  shift 167
	.  reduce 185 (src line 994)

	limit_opt  goto 165

state 104
	select_expression_list:  select_expression.    (60)

	.  reduce 60 (src line 420)


state 105
	select_expression:  '*'.    (62)

	.  reduce 62 (src line 430)


state 106
	select_expression:  expression.as_lower_opt 
	as_lower_opt: .    (67)

	AS  shift 171
	ID  shift 65
	.  reduce 67 (src line 454)

	as_lower_opt  goto 169
	sql_id  goto 170

state 107
	select_expression:  ID.'.' '*' 
	column_name:  ID.'.' sql_id 
	sql_id:  ID.    (218)

	'.'  shift 172
	.  reduce 218 (src line 1119)


state 108
	expression:  boolean_expression.    (65)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 

	AND  shift 173
	OR  shift 174
	.  reduce 65 (src line 444)


state 109
	expression:  value_expression.    (66)
	condition:  value_expression.compare value_expression 
	condition:  value_expression.IN tuple 
	condition:  value_expression.NOT IN tuple 
	condition:  value_expression.LIKE value_expression 
	condition:  value_expression.NOT LIKE value_expression 
	condition:  value_expression.BETWEEN value_expression AND value_expression 
	condition:  value_expression.NOT BETWEEN value_expression AND value_expression 
	condition:  value_expression.IS NULL 
	condition:  value_expression.IS NOT NULL 
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	IN  shift 176
	IS  shift 180
	LIKE  shift 178
	BETWEEN  shift 179
	LE  shift 192
	GE  shift 193
	NE  shift 194
	NULL_SAFE_EQUAL  shift 195
	'='  shift 189
	'<'  shift 190
	'>'  shift 191
	NOT  shift 177
	'&'  shift 181
	'|'  shift 182
	'^'  shift 183
	'+'  shift 184
	'-'  shift 185
	'*'  shift 186
	'/'  shift 187
	'%'  shift 188
	.  reduce 66 (src line 449)

	compare  goto 175

state 110
	boolean_expression:  condition.    (106)

	.  reduce 106 (src line 628)


state 111
	boolean_expression:  NOT.boolean_expression 

	EXISTS  shift 120
	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 112
	'~'  shift 128
	NOT  shift 111
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	boolean_expression  goto 196
	condition  goto 110
	value  goto 113
	value_expression  goto 158
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 112
	boolean_expression:  '('.boolean_expression ')' 
	tuple:  '('.value_expression_list ')' 
	subquery:  '('.select_statement ')' 

	SELECT  shift 18
	EXISTS  shift 120
	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 112
	'~'  shift 128
	NOT  shift 111
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	select_statement  goto 199
	boolean_expression  goto 197
	condition  goto 110
	value  goto 113
	value_expression  goto 200
	tuple  goto 115
	value_expression_list  goto 198
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 113
	value_expression:  value.    (137)

	.  reduce 137 (src line 765)


state 114
	value_expression:  column_name.    (138)

	.  reduce 138 (src line 770)


state 115
	value_expression:  tuple.    (139)

	.  reduce 139 (src line 774)


state 116
	value_expression:  unary_operator.value_expression 

	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	value  goto 113
	value_expression  goto 201
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 117
	value_expression:  sql_id.'(' ')' 
	value_expression:  sql_id.'(' select_expression_list ')' 
	value_expression:  sql_id.'(' DISTINCT select_expression_list ')' 
	column_name:  sql_id.    (167)

	'('  shift 202
	.  reduce 167 (src line 910)


state 118
	value_expression:  keyword_as_func.'(' select_expression_list ')' 

	'('  shift 203
	.  error


state 119
	value_expression:  case_expression.    (153)

	.  reduce 153 (src line 841)


state 120
	condition:  EXISTS.subquery 

	'('  shift 205
	.  error

	subquery  goto 204

state 121
	value:  STRING.    (169)

	.  reduce 169 (src line 920)


state 122
	value:  NUMBER.    (170)

	.  reduce 170 (src line 925)


state 123
	value:  VALUE_ARG.    (171)

	.  reduce 171 (src line 929)


state 124
	value:  NULL.    (172)

	.  reduce 172 (src line 933)


state 125
	tuple:  subquery.    (133)

	.  reduce 133 (src line 744)


state 126
	unary_operator:  '+'.    (156)

	.  reduce 156 (src line 856)


state 127
	unary_operator:  '-'.    (157)

	.  reduce 157 (src line 861)


state 128
	unary_operator:  '~'.    (158)

	.  reduce 158 (src line 865)


state 129
	keyword_as_func:  IF.    (154)

	.  reduce 154 (src line 846)


state 130
	keyword_as_func:  VALUES.    (155)

	.  reduce 155 (src line 851)


state 131
	case_expression:  CASE.value_expression_opt when_expression_list else_expression_opt END 
	value_expression_opt: .    (160)

	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  reduce 160 (src line 876)

	value  goto 113
	value_expression  goto 207
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	value_expression_opt  goto 206
	sql_id  goto 117

state 132
	comment_list:  comment_list COMMENT.    (52)

	.  reduce 52 (src line 384)


state 133
	insert_statement:  INSERT comment_opt INTO dml_table_expression.column_list_opt row_list on_dup_opt 
	insert_statement:  INSERT comment_opt INTO dml_table_expression.SET update_list on_dup_opt 
	column_list_opt: .    (191)

	SET  shift 209
	'('  shift 210
	.  reduce 191 (src line 1028)

	column_list_opt  goto 208

state 134
	update_statement:  UPDATE comment_opt dml_table_expression SET.update_list where_expression_opt order_by_opt limit_opt 

	ID  shift 80
	.  error

	column_name  goto 78
	update_list  goto 211
	update_expression  goto 77
	sql_id  goto 79

state 135
	dml_table_expression:  ID '.'.ID 

	ID  shift 212
	.  error


state 136
	delete_statement:  DELETE comment_opt FROM dml_table_expression.where_expression_opt order_by_opt limit_opt 
	where_expression_opt: .    (99)

	WHERE  shift 214
	.  reduce 99 (src line 597)

	where_expression_opt  goto 213

state 137
	update_list:  update_list ','.update_expression 

	ID  shift 80
	.  error

	column_name  goto 78
	update_expression  goto 215
	sql_id  goto 79

state 138
	set_statement:  SET comment_opt NAMES ID.    (27)

	.  reduce 27 (src line 260)


state 139
	update_expression:  column_name '='.value_expression 
	update_expression:  column_name '='.ON 

	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	ON  shift 217
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	value  goto 113
	value_expression  goto 216
	tuple  goto 115
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 140
	column_name:  ID '.'.sql_id 

	ID  shift 65
	.  error

	sql_id  goto 218

state 141
	create_statement:  CREATE DATABASE not_exists_opt ID.force_eof 
	force_eof: .    (219)

	.  reduce 219 (src line 1125)

	force_eof  goto 219

state 142
	not_exists_opt:  IF NOT.EXISTS 

	EXISTS  shift 220
	.  error


state 143
	create_statement:  CREATE TABLE not_exists_opt ID.force_eof 
	force_eof: .    (219)

	.  reduce 219 (src line 1125)

	force_eof  goto 221

state 144
	create_statement:  CREATE constraint_opt INDEX sql_id.using_opt ON ID force_eof 
	using_opt: .    (216)

	USING  shift 223
	.  reduce 216 (src line 1114)

	using_opt  goto 222

state 145
	create_statement:  CREATE VIEW sql_id force_eof.    (41)

	.  reduce 41 (src line 329)


state 146
	alter_statement:  ALTER ignore_opt TABLE ID.non_rename_operation force_eof 
	alter_statement:  ALTER ignore_opt TABLE ID.RENAME to_opt ID 

	ORDER  shift 229
	DEFAULT  shift 227
	ID  shift 230
	ALTER  shift 226
	DROP  shift 228
	RENAME  shift 225
	.  error

	non_rename_operation  goto 224

state 147
	alter_statement:  ALTER VIEW sql_id force_eof.    (44)

	.  reduce 44 (src line 344)


state 148
	rename_statement:  RENAME TABLE ID TO.ID 

	ID  shift 231
	.  error


state 149
	drop_statement:  DROP TABLE exists_opt ID.    (46)

	.  reduce 46 (src line 355)


state 150
	exists_opt:  IF EXISTS.    (202)

	.  reduce 202 (src line 1079)


state 151
	drop_statement:  DROP INDEX sql_id ON.ID 

	ID  shift 232
	.  error


state 152
	drop_statement:  DROP VIEW exists_opt sql_id.force_eof 
	force_eof: .    (219)

	.  reduce 219 (src line 1125)

	force_eof  goto 233

state 153
	replace_statement:  REPLACE comment_opt INTO dml_table_expression.column_list_opt row_list 
	replace_statement:  REPLACE comment_opt INTO dml_table_expression.SET update_list 
	column_list_opt: .    (191)

	SET  shift 235
	'('  shift 210
	.  reduce 191 (src line 1028)

	column_list_opt  goto 234

state 154
	show_statement:  SHOW VARIABLES LIKE value_expression.    (32)
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	'&'  shift 181
	'|'  shift 182
	'^'  shift 183
	'+'  shift 184
	'-'  shift 185
	'*'  shift 186
	'/'  shift 187
	'%'  shift 188
	.  reduce 32 (src line 289)


state 155
	tuple:  '('.value_expression_list ')' 
	subquery:  '('.select_statement ')' 

	SELECT  shift 18
	NULL  shift 124
	VALUES  shift 130
	ID  shift 80
	STRING  shift 121
	NUMBER  shift 122
	VALUE_ARG  shift 123
	'('  shift 155
	'~'  shift 128
	'+'  shift 126
	'-'  shift 127
	CASE  shift 131
	IF  shift 129
	.  error

	select_statement  goto 199
	value  goto 113
	value_expression  goto 164
	tuple  goto 115
	value_expression_list  goto 198
	keyword_as_func  goto 118
	subquery  goto 125
	unary_operator  goto 116
	column_name  goto 114
	case_expression  goto 119
	sql_id  goto 117

state 156
	show_statement:  SHOW STATUS LIKE value_expression.    (33)
	value_expression:  value_expression.'&' value_expression 
	value_expression:  value_expression.'|' value_expression 
	value_expression:  value_expression.'^' value_expression 
	value_expression:  value_expression.'+' value_expression 
	value_expression:  value_expression.'-' value_expression 
	value_expression:  value_expression.'*' value_expression 
	value_expression:  value_expression.'/' value_expression 
	value_expression:  value_expression.'%' value_expression 

	'&'  shift 181
	'|'  shift 182
	'^'  shift 183
	'+'  shift 184
	'-'  shift 185
	'*'  shift 186
	'/'  shift 187
	'%'  shift 188
	.  reduce 33 (src line 294)


state 157
	like_or_where_opt:  WHERE boolean_expression.    (102)
	boolean_expression:  boolean_expression.AND boolean_expression 
	boolean_expression:  boolean_expression.OR boolean_expression 
